--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <img src="images/humidity.png" />
             <div>
               <p class="humidity">50%</p>
-              <p>Влажность</p>
+              <p class="humidity__text">Влажность</p>
             </div>
           </div>
           <div class="col">
             <img src="images/wind.png" />
             <div>
               <p class="wind">15 km/h</p>
-              <p>Скорость ветра</p>
+              <p class="wind__text">Скорость ветра</p>
             </div>
           </div>
         </div>
